--- a/blogr-landing-page-main/css/style.scss
+++ b/blogr-landing-page-main/css/style.scss
@@ -26,6 +26,7 @@ body {
 .container--max-wigth {
   max-width: 1200px;
   margin: auto;
+  width: 100%;
 }
 
 .header {
@@ -290,18 +291,33 @@ body {
     }
 
     @media (min-width:900px) {
-      padding: 160px 0;
       background: url('./images/illustration-editor-desktop.svg') no-repeat;
       background-position: right -250px center;
+      margin: 0;
+      padding: 130px 0;
+
+      .sections__title {
+        text-align: center;
+        font-size: 3em;
+        margin-bottom: 80px;
+      }
+      
       .img {
         display: none;
       }
 
-     .container-one {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-      }
+      .container-one {
+         display: flex;
+         flex-direction: column;
+         align-items: flex-start;
+
+        .sections__paragraph {
+          width: 43%;  
+        }
+       }
+
+
+
     }
   }
 
@@ -342,8 +358,10 @@ body {
     }
 
     @media (min-width:900px) {
-      padding: 0;
-      margin: 0;
+      background-position: -212px -500px, center center;
+      background-size: 1000px, contain;
+      margin: 50px 0 0;
+      padding: 100px 0;
       .sections__container {
         display: flex;
         justify-content: flex-end;
@@ -351,7 +369,9 @@ body {
         .sections__img {
           width: 50%;
           height: 100%;
-          top: initial;
+          top: -160px;
+          left: 0;
+
           .img {
             width: initial;
           }
@@ -359,14 +379,15 @@ body {
 
         .sections__content {
           width: 50%;
+          margin-left: 50px;
 
           .sections__title {
-            margin: 0;
+            margin: 40px 0 25px;
           }
 
           .sections__paragraph {
             text-align: start;
-            width: 100%;
+            width: 90%;
             margin: 0;
           }
         }
@@ -377,11 +398,37 @@ body {
   &__three {
     margin: 60px 0 100px;
     .img {
-      background-image: url(./images/illustration-laptop-mobile.svg);
+      background-image: url('./images/illustration-laptop-mobile.svg');
       background-position: center;
       background-repeat: no-repeat;
       height: 330px;
       margin-bottom: 50px;
+      width: 100%;
+    }
+
+    @media (min-width:900px) {
+      margin: 100px 0;
+      background: url('./images/illustration-laptop-desktop.svg') no-repeat;
+      background-position: left -275px center;
+      height: 800px;
+
+      .img {
+        background: none;
+        margin: 0;
+        height: 100%;
+        width: 50%;
+      }
+
+      .sections__container {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        height: 100%;
+
+        .sections__content {
+          width: 50%;
+        }
+      }
     }
   }
   
@@ -420,7 +467,6 @@ body {
 
     &__paragraph {
       text-align: start;
-      width: 40%;
     }
   }
 }
