--- a/blogr-landing-page-main/css/style.css
+++ b/blogr-landing-page-main/css/style.css
@@ -149,7 +149,7 @@ body {
     position: absolute;
     top: 40px;
     font-size: 0.9em;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-weight: 400;
     padding: 30px 25px;
   }
