Arreglo la forma de captar el boton reset

--- a/tip-calculator-app-main/css/style.scss
+++ b/tip-calculator-app-main/css/style.scss
@@ -231,6 +231,7 @@ html {
     border-radius: 5px;
     color: var(--very-dark-cyan);
     font-weight: 700;
+    text-align: center;
     text-transform: uppercase;
     padding: 19px 0 15px;
     width: 100%;
