--- a/tip-calculator-app-main/css/style.css
+++ b/tip-calculator-app-main/css/style.css
@@ -295,6 +295,7 @@ html {
   border-radius: 5px;
   color: var(--very-dark-cyan);
   font-weight: 700;
+  text-align: center;
   text-transform: uppercase;
   padding: 19px 0 15px;
   width: 100%;
