--- a/3-column-preview-card-component-main/css/style.css
+++ b/3-column-preview-card-component-main/css/style.css
@@ -18,6 +18,7 @@
 html {
   font-size: 62.5%;
   font-family: var(--font-lexend);
+  background-color: var(--transparent-white);
 }
 
 .main-container {
