--- a/3-column-preview-card-component-main/css/style.scss
+++ b/3-column-preview-card-component-main/css/style.scss
@@ -22,6 +22,7 @@
 html {
   font-size: 62.5%;
   font-family: var(--font-lexend);
+  background-color: var(--transparent-white);
 }
 
 .main-container {
