--- a/huddle-landing-page-with-single-introductory-section-master/css/style.scss
+++ b/huddle-landing-page-with-single-introductory-section-master/css/style.scss
@@ -17,11 +17,17 @@
 html {
   font-family: var(--font-open);
   font-size: 62.5%;
-  min-width: 375px;
+  min-width: 320px;
+}
+
+.space-lateral {
+  padding: 0 35px;
 }
 
 .main-container {
-  background: var(--violet);
+  background: url(../assets/images/bg-mobile.svg) no-repeat
+    var(--violet);
+  background-size: contain;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -31,26 +37,27 @@ html {
   padding: 40px 0;
 }
 
-.space-lateral {
-  padding: 0 35px;
-}
-
 .logo-container {
   align-self: start;
+  max-width: 1440px;
+
   img {
     width: 130px;
   }
 }
 
 .content-container {
+  max-width: 1440px;
+
   .content__img {
+    text-align: center;
     img {
       width: 100%;
     }
   }
 
   .content__content {
-    margin: 60px 0 0;
+    margin: 60px 0 10px;
     text-align: center;
     color: #fff;
 
@@ -67,15 +74,17 @@ html {
     }
 
     button {
-      border-radius: 20px;
+      border-radius: 50px;
       border: none;
       color: var(--violet);
       font-family: var(--font-open);
       font-size: 1.2rem;
-      width: 65%;
+      width: 200px;
+      height: 40px;
       padding: 10px 0;
       margin: 0;
       box-shadow: 0px 7px 10px -7px rgba(21, 21, 21, 0.8);
+      cursor: pointer;
 
       &:hover {
         color: #fff;
@@ -90,6 +99,7 @@ html {
   justify-content: center;
   align-items: center;
   gap: 10px;
+  margin: 0 0 40px;
 
   div {
     border: 1px solid #fff;
@@ -107,7 +117,7 @@ html {
     }
 
     &:hover i {
-      color: #f85ac9;      
+      color: #f85ac9;
     }
 
     &:hover {
